nobase_include_HEADERS = \
	opx/dn_platform_utils.h \
	opx/private/dn_pas.h \
	opx/private/pald.h \
	opx/private/pas_card.h \
	opx/private/pas_chassis.h \
	opx/private/pas_config.h \
	opx/private/pas_data_store.h \
	opx/private/pas_display.h \
	opx/private/pas_entity.h \
	opx/private/pas_event.h \
	opx/private/pas_fan.h \
	opx/private/pas_fan_tray.h \
	opx/private/pas_fuse_common.h \
	opx/private/pas_fuse_handlers.h \
	opx/private/pas_fuse_main.h \
	opx/private/pas_led.h \
	opx/private/pas_log.h \
	opx/private/pas_main.h \
	opx/private/pas_media.h \
	opx/private/pas_media_sdi_wrapper.h \
	opx/private/pas_monitor.h \
	opx/private/pas_psu.h \
	opx/private/pas_res_structs.h \
	opx/private/pas_temp_sensor.h \
	opx/private/pas_timer.h \
	opx/private/pas_utils.h
