#
# Copyright (c) 2018 Dell Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
# LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS
# FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
#
# See the Apache Version 2.0 License for specific language governing
# permissions and limitations under the License.
#

nobase_include_HEADERS = \
	opx/dn_platform_utils.h \
	opx/private/dn_pas.h \
	opx/private/pald.h \
	opx/private/pas_card.h \
	opx/private/pas_chassis.h \
	opx/private/pas_config.h \
	opx/private/pas_data_store.h \
	opx/private/pas_display.h \
	opx/private/pas_entity.h \
	opx/private/pas_event.h \
	opx/private/pas_fan.h \
	opx/private/pas_fan_tray.h \
	opx/private/pas_fuse_common.h \
	opx/private/pas_fuse_handlers.h \
	opx/private/pas_fuse_main.h \
	opx/private/pas_led.h \
	opx/private/pas_log.h \
	opx/private/pas_main.h \
	opx/private/pas_media.h \
	opx/private/pas_media_sdi_wrapper.h \
	opx/private/pas_monitor.h \
        opx/private/pas_nvram.h \
	opx/private/pas_psu.h \
	opx/private/pas_res_structs.h \
	opx/private/pas_temp_sensor.h \
	opx/private/pas_timer.h \
	opx/private/pas_utils.h \
    opx/private/pas_job_queue.h

nobase_include_HEADERS += \
	opx/dn_pas_media_vendor.h \
	opx/private/pas_comm_dev.h \
	opx/private/pas_host_system.h

